--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <head>
         <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
         <script src="./canvas.js"></script>
+        <script src="./models/model.js"></script>
+        <script src="./views/view.js"></script>
     </head>
     <body>
         <main></main>
