Added obstacle logic. Objects are now created and move using the draw loop from p5. Obstacles are created every 5 seconds and an opening is randomly created as well. Also added drawing of the background.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <script src="./canvas.js"></script>
         <script src="./models/model.js"></script>
         <script src="./views/view.js"></script>
+        <script src="./entities/player.js"></script>
+        <script src="./entities/obstacle.js"></script>
     </head>
     <body>
         <main></main>
